--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<method-draw></method-draw>
+<div class="h-[900px] w-full flex rounded-xl">
+    <method-draw class=" flex-col grow"></method-draw>
+</div>
